# TAPL-HS

./: README.md
arith/: arith.cabal  stack.yaml
arith/app/: Main.hs
arith/src/Arith/: EvalBS.hs  EvalSS.hs  Parse.hs  Syntax.hs
arith/test/: Spec.hs
untyped/: stack.yaml  untyped.cabal
untyped/app/: Main.hs
untyped/src/Untyped/: EvalBS.hs  EvalSS.hs  Syntax.hs
untyped/test/: Spec.hs
