name:                untyped
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/untyped#readme
license:             PublicDomain
author:              onixie
maintainer:          onixie@gmail.com
category:            Example
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Untyped.Syntax
                     , Untyped.EvalSS
                     , Untyped.EvalBS
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable untyped-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , untyped
  default-language:    Haskell2010

test-suite untyped-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , untyped
                     , QuickCheck >= 2.8 && < 2.9
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/onixie/TAPL-HS
